# safe-deps

./: .cspell.json  .gitignore  .markdownlint.json  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_LICENSES.md  deny.toml  package-lock.json  package.json
.github/: actionlint.yaml  dependabot.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  docs.yml  release-tag.yml  release.yml
docs/: security-best-practices.md
docs/design/: safe-deps-cli-design.md
examples/: README.md
examples/clean-baseline/: README.md  package-lock.json  package.json
examples/missing-lockfile/: README.md  package.json
examples/npm-insecure-registry/: .npmrc  README.md  package.json
examples/pip-extra-index/: README.md  requirements.txt
scripts/: safe-deps.rb.tmpl
src/: check_runner.rs  cli.rs  config.rs  diagnostics.rs  filesystem.rs  lib.rs  main.rs  path.rs  project.rs  rule.rs
src/audit/: cache.rs  collect.rs  mod.rs  osv.rs
src/ci/: circleci.rs  command.rs  github_actions.rs  gitlab_ci.rs  mod.rs  yaml.rs
src/ecosystems/: cargo.rs  go.rs  mod.rs  source.rs
src/ecosystems/cargo/: depsource.rs  lockfile.rs  manifest.rs  mod.rs  sourceconfig.rs  workspace.rs
src/ecosystems/go/: depsource.rs  lockfile.rs  manifest.rs  mod.rs
src/ecosystems/javascript/: bun.rs  mod.rs  npm.rs  package_json.rs  pnpm.rs  yarn.rs
src/ecosystems/python/: mod.rs  pip.rs  pyproject.rs  requirements.rs  uv.rs
src/report/: json.rs  junit.rs  mod.rs  sarif.rs  text.rs
src/rules/: meta.rs  mod.rs  sd001_lockfile_missing.rs  sd002_non_frozen_ci_install.rs  sd003_insecure_registry.rs  sd004_integrity_disabled.rs  sd005_install_script_bypass.rs  sd006_unsafe_dependency_source.rs  sd007_dependency_confusion.rs  sd008_audit_missing.rs  sd009_dangerous_flags.rs
tests/: cli.rs  output_and_diagnostics.rs  robustness.rs  rule_metadata.rs
