[package]
name = "safe-deps"
version = "0.1.0"
edition = "2021"
# Real MSRV: dependencies (clap, indexmap, globset, …) require Rust 1.85 (they
# declare rust-version 1.85 and use edition 2024), so 1.80 does not build. The
# `msrv` CI job pins this version.
rust-version = "1.85"
license = "MIT"
description = "Static linter for package-management security practices."
repository = "https://github.com/baneido/safe-deps"
readme = "README.md"
keywords = ["security", "supply-chain", "linter", "dependencies", "ci"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "safe-deps"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `serde_yaml` (dtolnay) is unmaintained/deprecated; use the maintained
# `serde_yaml_ng` fork under the same `serde_yaml` import name so call sites are
# unchanged. Same API and `unsafe-libyaml` backend; MIT-licensed (the old crate
# was dual MIT/Apache-2.0). Tracked in issue #23.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
toml = "0.8"
thiserror = "2"
ignore = "0.4"
globset = "0.4"
rayon = "1"

[dev-dependencies]
insta = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
