[package]
name = "safe-deps"
version = "0.1.0"
edition = "2021"
# Real MSRV: transitive dependencies require Rust 1.86 — the audit HTTP stack
# (ureq → url → idna → icu_* 2.2.0) declares rust-version 1.86, and others use
# edition 2024, so any toolchain older than 1.86 fails to build. The `msrv` CI
# job pins this version.
rust-version = "1.86"
license = "MIT"
description = "Static linter for package-management security practices."
repository = "https://github.com/baneido/safe-deps"
readme = "README.md"
keywords = ["security", "supply-chain", "linter", "dependencies", "ci"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "safe-deps"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `serde_yaml` (dtolnay) is unmaintained/deprecated; use the maintained
# `serde_yaml_ng` fork under the same `serde_yaml` import name so call sites are
# unchanged. Same API and `unsafe-libyaml` backend; MIT-licensed (the old crate
# was dual MIT/Apache-2.0). Tracked in issue #23.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
toml = "0.8"
thiserror = "2"
ignore = "0.4"
globset = "0.4"
rayon = "1"
# Native HTTP for `safe-deps audit` (the only networked path). Uses the `ureq`
# rustls backend (`ring`), which needs no `cmake`/`aws-lc`. Only pulled in with
# the default `native-http` feature.
ureq = { version = "2.12", default-features = false, features = [
    "tls",
], optional = true }

[features]
# `native-http` (default) makes `audit` self-contained via the in-process `ureq`
# client. `curl-transport` is the legacy fallback that shells out to the system
# `curl`; build with `--no-default-features --features curl-transport` for an
# HTTP stack that needs no TLS crate (e.g. toolchains without a C compiler).
default = ["native-http"]
native-http = ["dep:ureq"]
curl-transport = []

[dev-dependencies]
insta = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
