[package]
name = "safe-deps"
version = "0.2.1"
edition = "2021"
# Real MSRV: transitive dependencies require Rust 1.86 — the audit HTTP stack
# (ureq → url → idna → icu_* 2.2.0) declares rust-version 1.86, and others use
# edition 2024, so any toolchain older than 1.86 fails to build. The `msrv` CI
# job pins this version.
rust-version = "1.86"
license = "MIT"
description = "Static linter for package-management security practices."
repository = "https://github.com/baneido/safe-deps"
readme = "README.md"
keywords = ["security", "supply-chain", "linter", "dependencies", "ci"]
categories = ["command-line-utilities", "development-tools"]
# Keep the published `.crate` lean: ship only what is needed to build and use the
# crate (src/, tests/, Cargo.lock, and the reader-facing docs/licenses). Everything
# excluded here is dev-process tooling or fixtures with no value to a crate
# consumer — notably the `examples/` linter fixtures (npm/pip projects, not Rust
# example targets; the 93 KB `package-lock.json` lives under them and at the root)
# and the Node-based markdown/spell-lint toolchain. `cargo publish` already drops
# anything in `.gitignore` (target/, node_modules/), so this only trims the rest.
exclude = [
    "/.github",
    "/docs",
    "/examples",
    "/package.json",
    "/package-lock.json",
    "/.npmrc",
    "/.cspell.json",
    "/.markdownlint.json",
    "/deny.toml",
    "/CLAUDE.md",
    "/CONTRIBUTING.md",
    "/DEVELOPMENT.md",
    "/RELEASING.md",
]

[[bin]]
name = "safe-deps"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `serde_yaml` (dtolnay) is unmaintained/deprecated; use the maintained
# `serde_yaml_ng` fork under the same `serde_yaml` import name so call sites are
# unchanged. Same API and `unsafe-libyaml` backend; MIT-licensed (the old crate
# was dual MIT/Apache-2.0). Tracked in issue #23.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
toml = "1.1"
thiserror = "2"
ignore = "0.4"
globset = "0.4"
rayon = "1"
# Native HTTP for `safe-deps audit` (the only networked path). Uses the `ureq`
# rustls backend (`ring`), which needs no `cmake`/`aws-lc`. Only pulled in with
# the default `native-http` feature.
ureq = { version = "2.12", default-features = false, features = [
    "tls",
], optional = true }
# Used by the `audit` cache to create the temp file for an atomic write with a
# guaranteed-new, unguessable name (`O_EXCL` + random suffix), avoiding the
# symlink/TOCTOU and collision risks of a predictable pid+timestamp name.
tempfile = "3"

[features]
# `native-http` (default) makes `audit` self-contained via the in-process `ureq`
# client. `curl-transport` is the legacy fallback that shells out to the system
# `curl`; build with `--no-default-features --features curl-transport` for an
# HTTP stack that needs no TLS crate (e.g. toolchains without a C compiler).
default = ["native-http"]
native-http = ["dep:ureq"]
curl-transport = []

[dev-dependencies]
insta = "1"
assert_cmd = "2"
predicates = "3"
proptest = "1"

[profile.release]
lto = true
codegen-units = 1
